--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,41 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 :root {
-    --xm-screen: 30em;
-    --sm-screen: 40em;
-    --md-screen: 48em;
-    --lg-screen: 64em;
-    --xl-screen: 80em;
-    --xxl-screen: 96em;
+  --xm-screen: 30em;
+  --sm-screen: 40em;
+  --md-screen: 48em;
+  --lg-screen: 64em;
+  --xl-screen: 80em;
+  --xxl-screen: 96em;
 }
 
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.5;
-    background-color: #efef07;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.5;
+  background-color: #efef07;
 }
-
 
 h1 {
-    font-size: 6rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    text-align: center;
-    margin-top: 2rem;
-    background-image: linear-gradient(to right, #000, #28b485, #000, #28b485, #000);
-    -webkit-background-clip: text;
-    color: transparent;
+  font-size: 6rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 2rem;
+  background-image: linear-gradient(
+    to right,
+    #000,
+    #28b485,
+    #000,
+    #28b485,
+    #000
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
-
